--- a/03SkepticalPetrophysicist.html
+++ b/03SkepticalPetrophysicist.html
@@ -284,10 +284,10 @@
 				<td width="75%">
 					<br><br>				
 					In 1968 Waxman and Smits, representing Shell, and benefiting from Shell's reputation as
-                    the industy's leading experts in petrophysics, trading upon G. E. Archie's pioneering discoveries,
-                    introduced a model for the conductivity interpretation of oil-bearing shaly sands. The model
+                    			the industy's leading experts in petrophysics, trading upon G. E. Archie's pioneering discoveries,
+                    			introduced a model for the conductivity interpretation of oil-bearing shaly sands. The model
 					relied upon electrochemical theory; however, the paper was not tutorial in any way. In addition to
-					its being non-tutorial and written mainly to their fellow electrochemists at Shell, is among
+					its being non-tutorial and written mainly to their fellow electrochemists at Shell, it is among
 					the most inscrutably written papers in the oil-patch literature. <br>
 					<br>
 					The Waxman-Smits model acquired the patina of being derived from first principles mainly from
@@ -298,8 +298,8 @@
 					had problems of its own. <br>
 					<br>
 					This video deconstucts the theoretical basis of the Waxman-Smits model on its own terms. I show
-                    that it is not, as it claims to be, a parallel conductivity model. This is not to say that it is 
-					not a "useful" model. It is certainly better than "no model", and its parameters are measurable
+			                that it is not, as it claims to be, a parallel conductivity model. This is not to say that it is 
+					not a "useful" model. It is certainly better than "no model", and its fundamental parameter (Cw axis intercept) is measurable
 					in the laboratory. It has been an industry standard model for a long time. I hope this video
 					clarifies some of its foundations. 
 					<br><br>
